fixed shows css not working for the show page once its deploy + fixed bio hero section background image not showing

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -318,7 +318,7 @@ body {
 .hero {
   display: flex;
   flex-direction: column;
-  background-image: url("/assets/images/hero-shows.jpg");
+  background-image: url("../assets/images/hero-shows.jpg");
   background-size: cover;
   background-position: center;
   height: 90vw;
@@ -551,4 +551,4 @@ body {
 
 .shows__container {
   cursor: pointer;
-}/*# sourceMappingURL=shows.css.map */
+} /*# sourceMappingURL=shows.css.map */
